tests/rosetta/out/Rust/bioinformatics-base-count.error
rustc error: exit status 1
error[E0308]: mismatched types
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:21:64
   |
21 |         println!("{}", format!("{}{}", format!("{}{}", padLeft(i.to_string(), 5), ": "), &dna[i as usize..k as usize]));
   |                                                        ------- ^^^^^^^^^^^^^ expected `&str`, found `String`
   |                                                        |
   |                                                        arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:3:8
   |
3  |     fn padLeft(s: &'static str, w: i32) -> &'static str {
   |        ^^^^^^^ ---------------
help: consider borrowing here
   |
21 |         println!("{}", format!("{}{}", format!("{}{}", padLeft(&i.to_string(), 5), ": "), &dna[i as usize..k as usize]));
   |                                                                +

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:30:43
   |
30 |         let ch = &dna[idx as usize..idx + 1 as usize];
   |                                           ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:30:37
   |
30 |         let ch = &dna[idx as usize..idx + 1 as usize];
   |                                     ^^^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:30:41
   |
30 |         let ch = &dna[idx as usize..idx + 1 as usize];
   |                                         ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:50:55
   |
50 |     println!("{}", format!("{}{}", "    A: ", padLeft(a.to_string(), 3)));
   |                                               ------- ^^^^^^^^^^^^^ expected `&str`, found `String`
   |                                               |
   |                                               arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:3:8
   |
3  |     fn padLeft(s: &'static str, w: i32) -> &'static str {
   |        ^^^^^^^ ---------------
help: consider borrowing here
   |
50 |     println!("{}", format!("{}{}", "    A: ", padLeft(&a.to_string(), 3)));
   |                                                       +

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:51:55
   |
51 |     println!("{}", format!("{}{}", "    C: ", padLeft(c.to_string(), 3)));
   |                                               ------- ^^^^^^^^^^^^^ expected `&str`, found `String`
   |                                               |
   |                                               arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:3:8
   |
3  |     fn padLeft(s: &'static str, w: i32) -> &'static str {
   |        ^^^^^^^ ---------------
help: consider borrowing here
   |
51 |     println!("{}", format!("{}{}", "    C: ", padLeft(&c.to_string(), 3)));
   |                                                       +

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:52:55
   |
52 |     println!("{}", format!("{}{}", "    G: ", padLeft(g.to_string(), 3)));
   |                                               ------- ^^^^^^^^^^^^^ expected `&str`, found `String`
   |                                               |
   |                                               arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:3:8
   |
3  |     fn padLeft(s: &'static str, w: i32) -> &'static str {
   |        ^^^^^^^ ---------------
help: consider borrowing here
   |
52 |     println!("{}", format!("{}{}", "    G: ", padLeft(&g.to_string(), 3)));
   |                                                       +

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:53:55
   |
53 |     println!("{}", format!("{}{}", "    T: ", padLeft(t.to_string(), 3)));
   |                                               ------- ^^^^^^^^^^^^^ expected `&str`, found `String`
   |                                               |
   |                                               arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:3:8
   |
3  |     fn padLeft(s: &'static str, w: i32) -> &'static str {
   |        ^^^^^^^ ---------------
help: consider borrowing here
   |
53 |     println!("{}", format!("{}{}", "    T: ", padLeft(&t.to_string(), 3)));
   |                                                       +

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
 --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:7:13
  |
7 |             res += " ";
  |             ---^^^^^^^
  |             |
  |             cannot use `+=` on type `&str`

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustbioinformatics-base-count2457207887/001/prog.rs:10:16
   |
3  |     fn padLeft(s: &'static str, w: i32) -> &'static str {
   |                                            ------------ expected `&str` because of return type
...
10 |         return format!("{}{}", res, s);
   |                ^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0277, E0308, E0368.
For more information about an error, try `rustc --explain E0277`.
